tests/test_enum/bad/ambiguous_wildcard.catala_en
## Wildcard cannot be used as single match case

```catala
declaration enumeration E:
  -- Case1
  -- Case2

declaration scope A:
  context x content E
  context y content integer

scope A:
  definition x equals Case1
  definition y equals match x with pattern
    -- Anything : 31
```
